Assets    : Switched resources from bootleg to official             Fixed TM icon             Fixed tiles assets             Added blank tile and forest without oxygen icons Framework : Added enablePlayerPanel,disablePlayerPanel to bga-framework.d.ts UI        : Changed miniboard style             Implemented BGA "Passed" (disabled) when player passes             Changed card visibility logic on player panel             Adjusted sizes and positions of hexes and tiles             Added zoom effect on corp             removed old tooltips on cards

--- a/src/css/VLayout.scss
+++ b/src/css/VLayout.scss
@@ -439,66 +439,75 @@
       top: calc(100% - $row * (100% / 24));
     }
   }
-  .miniboard > * {
-    display: inline-block;
+
+  /*
+  darhf:temp deactivate
+
+.miniboard > * {
+ display: inline-block;
+}
+.miniboard {
+
+
+ .playerboard_header {
+   width: 100%;
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+
+   .playerboard_group {
+     position: relative;
+     width: fit-content;
+     height: fit-content;
+     display: grid;
+     grid-template-columns: 60% 40%;
+     grid-template-rows: repeat(2, 1fr);
+     grid-column-gap: 0px;
+     grid-row-gap: 0px;
+     width: calc(var(--resourcesize) * 2.2);
+     height: calc(var(--resourcesize) * 1);
+     font-family: "Prototype";
+     font-size: calc(var(--resourcesize) * 0.4);
+     margin: calc(var(--resourcesize) * 0.06);
+
+     .playerboard_group_img {
+       display: flex;
+       justify-content: flex-end;
+       align-items: center;
+       grid-area: 1 / 1 / 4 / 2;
+       .token_img {
+         margin-right: 0;
+       }
+     }
+     .playerboard_produce {
+       width: revert;
+       height: revert;
+       grid-area: 2 / 2 / 3 / 3;
+     }
+     .playerboard_own {
+       width: revert;
+       height: revert;
+       background: #ffffff7d;
+       grid-area: 1 / 2 / 2 / 3;
+     }
+
+     .player_tags .badge[data-state="0"],
+     .tracker[data-state="0"] {
+       display: revert;
+     }
+   }
+
+   .playerboard_own {
+     width: var(--pb_cellsize);
+     height: calc(var(--pb_cellsize) * 0.5);
+     display: flex;
+     justify-content: space-evenly;
+     align-items: center;
+   }
+ }
+
+
   }
-  .miniboard {
-    .playerboard_header {
-      width: 100%;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-
-      .playerboard_group {
-        position: relative;
-        width: fit-content;
-        height: fit-content;
-        display: grid;
-        grid-template-columns: 60% 40%;
-        grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-        width: calc(var(--resourcesize) * 2.2);
-        height: calc(var(--resourcesize) * 1);
-        font-family: "Prototype";
-        font-size: calc(var(--resourcesize) * 0.4);
-        margin: calc(var(--resourcesize) * 0.06);
-
-        .playerboard_group_img {
-          display: flex;
-          justify-content: flex-end;
-          align-items: center;
-          grid-area: 1 / 1 / 4 / 2;
-          .token_img {
-            margin-right: 0;
-          }
-        }
-        .playerboard_produce {
-          width: revert;
-          height: revert;
-          grid-area: 2 / 2 / 3 / 3;
-        }
-        .playerboard_own {
-          width: revert;
-          height: revert;
-          background: #ffffff7d;
-          grid-area: 1 / 2 / 2 / 3;
-        }
-
-        .player_tags .badge[data-state="0"],
-        .tracker[data-state="0"] {
-          display: revert;
-        }
-      }
-
-      .playerboard_own {
-        width: var(--pb_cellsize);
-        height: calc(var(--pb_cellsize) * 0.5);
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-      }
-    }
-  }
+  */
 
   .player_tags .badge[data-state="0"],
   .player_tags .tracker[data-state="0"] {
